--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,9 +34,9 @@
           <div class="card-body container1">
             <h5 class="card-title element">Les données lié au plantes</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary element">Date: {{ realTime?.date }}</h6>
-            <p class="card-text element">Température: {{ realTime?.temperature }}</p>
-            <p class="card-text element">Humidité: {{ realTime?.humidity }}</p>
-            <p class="card-text element">Humidité du sol: {{ realTime?.sol_humidity }}</p>
+            <p class="card-text element">Température: {{ realTime?.temperature }} °C</p>
+            <p class="card-text element">Humidité: {{ realTime?.humidity }} %</p>
+            <p class="card-text element">Humidité du sol: {{ realTime?.sol_humidity }} %</p>
           </div>
         </div>
       </div>
